# tty-greeter

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/auth/: pam_auth.cpp  pam_auth.hpp
src/session/: session_manager.cpp  session_manager.hpp
src/ui/: menu.cpp  menu.hpp
